Fix news cards in IE and add spacing for all browsers

--- a/app/assets/stylesheets/website/components/cards/link.scss
+++ b/app/assets/stylesheets/website/components/cards/link.scss
@@ -1,4 +1,6 @@
 .c-card--link {
+  flex: 1 1 100%;
+
   &:hover {
     position: relative;
     z-index: 1;
